Add IN PROGRESS to section headings

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -1,4 +1,4 @@
-\subsection{Don't just publish the raw data}
+\subsection{IN PROGRESS. Don't just publish the raw data}
 
 Recall that the main objective of accessing the data is to obtain knowledge, to understand and make sense of it.
 Of course, pure data by itself has no value until we can understand it and apply it.
