--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -1,4 +1,4 @@
-\subsection{Solve a real problem}
+\subsection{IN PROGRESS. Solve a real problem}
 
 Once the relevance has been demonstrated, we consider the benefits and advantages that the use of the data as a user can bring us.
 This objective requires meticulous work both to discover it and to transmit these concepts to the user in a clear way,
@@ -27,7 +27,7 @@ Here comes the representation of the information in a way that awakens the need 
 
 The user is offered a platform that indicates his exposure to totally customized air pollution without the need to carry a device for reading pollutants.\\
 
-Unique feature, fully customized pollution exposure monitoring. \\
+Unique feature, fully customized pollution exposure monitoring.\\
 
 Description of the effects, polluting sources, description of the pollutants in a single platform. \\
 
