--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -1,4 +1,4 @@
-\subsection{Present consequences and outcomes}
+\subsection{IN PROGRESS. Present consequences and outcomes}
 
 To make a good selection in the dataset of the fields that are relevant or the combination of these, it is essential to
 solid knowledge on the subject to be treated. Therefore, it is fundamental to dedicate the necessary time to enter the
