--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -1,4 +1,4 @@
-\subsection{Make your data available}
+\subsection{IN PROGRESS. Make your data available}
     
 As we mentioned in the introduction to this chapter, the datasets may be available in the original source. However, this doesn't necessarily
 mean that they are readily accessible.\\
