--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -6,7 +6,7 @@ This allows interested users, and third parties, to verify you data integrity to
 
 The quality of the dataset can be measured according to the following characteristics of the values of the fields:
 
-\begin{itemized}
+\begin{itemize}
     \item \textbf{Precision}. Units of measurement in the correct scale. For example, if we are measuring people's height, it 
     would be meaningless to provide these measurements in integral meters, since the possible values will be 0, 1 and 2. \\
 
@@ -19,7 +19,7 @@ The quality of the dataset can be measured according to the following characteri
     \item \textbf{Completeness}. The data must be consistent in each of the samples. The samples can be differentiated
     from each other, as we see in the Figure below, can share some fields and not others. It would be
     better to have a high degree of compliance for the data that interests us in our design.
-\end{itemized}
+\end{itemize}
 
 \begin{figure}[ht]
     \centering
