Solve a real problem

--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -1,41 +1,31 @@
-\subsection{IN PROGRESS. Solve a real problem}
+\subsection{Solve a real problem}
 
-Once the relevance has been demonstrated, we consider the benefits and advantages that the use of the data as a user can bring us.
-This objective requires meticulous work both to discover it and to transmit these concepts to the user in a clear way,
-simple and direct and thus achieve a link that increases the curiosity of the user to deepen the subject and stay informed.\\
-
-It is very important to stay in the user's place and discover what is really necessary for him.
-Only if the user understands the relevance of the data and the influence that these have in their daily life, a commitment on the part of this will be possible.\\
-
-That is, the information should cover a need of the user, even if the user does not know a priori that he has this need.
-Maybe it's our goal is to let he see how useful and advantageous this data usage can be.\\
-
-When we have some data that is updated periodically, we must think in what way the fluctuation may interest us or that certain changes.
-Here comes the representation of the information in a way that awakens the need for data monitoring by of the user.
+The history of the internet is littered with solutions to non-problems.
+It is very easy as scientists and engineers to get excited about what is possible, without considering if it is actually
+useful. So it is important to consider if having access to your data is actually going to solve a real problem that your
+users have. This is not the same thing as saying that their is a \emph{demand} for your data, because it is entirely possible 
+the you can solve a problem that users don't currently realize they have.
+Maybe your major task is to let he see how useful your data can be.\\
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item First of all discover in what way the data can help users.
-    \item Next we have to find a way to let him see because they are important to him and how he can benefit from using them in his daily life.
-    \item If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
-    Conduct a market study and see if there are already products that offer this information.
-    If this is the case, it will be analyzed because it is attractive to the user and try to improve it.
+    \item Put yourself in your user's shoes, and consider how your data may be of practical benefit.
+    % \item Next we have to find a way to let him see because they are important to him and how he can benefit from using them in his daily life.
+    % \item If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
+    % Conduct a market study and see if there are already products that offer this information.
+    % If this is the case, it will be analyzed because it is attractive to the user and try to improve it.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-The user is offered a platform that indicates his exposure to totally customized air pollution without the need to carry a device for reading pollutants.\\
+Aire Guru allows users to see their exposure to air pollution without the need to carry an air monitoring device.
+This has not previously been possible. 
+Our post-launch survey results indicate that users found this not only interesting, but also strongly desirable, 
+particularly given the health consequences that Aire Guru explains in the context of their exposure.\\
 
-Unique feature, fully customized pollution exposure monitoring.\\
-
-Description of the effects, polluting sources, description of the pollutants in a single platform. \\
-
-Air Guru with explicit permission to read the location by the user, pick up the polygon where
-the user is found and stores the most recent pollution measure for that polygon.
-Next, the user can view the exposure to the pollution to which he has been subjected.\\
-
-Presenting how exposure to pollution can be reduced more specifically.\\
+By providing geographically specific data, in both historical and current hourly timeframes, users are able
+to control their exposure, which in some cases leads directly to the avoidance of serious negative health outcomes.\\
 
 \begin{figure}[ht]
     \centering 
@@ -58,7 +48,3 @@ Presenting how exposure to pollution can be reduced more specifically.\\
     \includegraphics[width=8cm]{importedDataDecember}
     \caption{Personal Records. December}
 \end{figure}
-
-We can see the exposure to air pollution since 2018 without having to have been using the website since
-using the import Google chronology button, we can import the location history provided by the pollution that has been exposed since 2018.
-In the help section we can find a guide how to export and import this history of locations.
