First updates from Luz

--- a/contents/conclusion/_section.tex
+++ b/contents/conclusion/_section.tex
@@ -1,4 +1,5 @@
-\section{Conclusion}
+\section{General Comments}
+
 En este capitulo se han visto los puntos claves para poder mostrar la informacion de una manera accessible,
 relevante y atractiva al usuario medio. Vemos que algunos puntos se han aplicado satisfactoriamente en la herramienta
 Aire Guru y otros estan aun por aplicar.
