Present consequences and outcomes

--- a/chapter.tex
+++ b/chapter.tex
@@ -8,6 +8,7 @@
 \usepackage{subfigure }
 \usepackage{verbatim}
 \usepackage{amssymb}
+\usepackage{chemformula}
 
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
