--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -35,15 +35,23 @@ Our website uses the air quality data provided by the city of Málaga in its ope
 \begin{figure}[ht]
     \centering
     \subfigure[Main page]
-        {\includegraphics[width=5.5cm]{openDataPortal}}
+        {\includegraphics[width=5.5cm]{Figure_4_1_1_a_openDataPortal_mainPage}}
     \hfill
     \subfigure [Category environment]
-        {\includegraphics[width=5.5cm]{openDataPortalEnviromentCategory}}
+        {\includegraphics[width=5.5cm]{Figure_4_1_1_b_openDataPortalEnviromentCategory}}
     \vfill
     \subfigure[GeoJson Document]
-        {\centering \includegraphics[width=4.75cm]{geoJsonAirQualityDataRaw}}
+        {\centering \includegraphics[width=4.75cm]{Figure_4_1_1_c_geoJsonDocument}}
     \caption{Open Data Portal Málaga}
 \end{figure}
+
+
+\begin{center}
+    \bf{ (a) Main page     (b)Category environment\\
+    (c)GeoJsonDocument
+        
+    Figure 4.1.1. Malaga's open data portal}
+\end{center}
 
 This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
 Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
