--- a/contents/aire_guru/_section.tex
+++ b/contents/aire_guru/_section.tex
@@ -97,18 +97,24 @@ occurring. \\
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=12cm]{aireGuruArquitecture}
+    \includegraphics[width=12cm]{Figure_2_1_aireGuruArquitecture}
     \caption{Arquitecture Aire Guru}
+
 \end{figure}
 
+\begin{center}
+\bf Figure 2.1. Arquitecture Aire Guru\\
+\end{center}
 The data to the users through a web interface. \\
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=9cm]{aireGuru}
+    \includegraphics[width=9cm]{Figure_2_2_aireGuru_webInterface}
     \caption{Aire Guru. Web Interface}
 \end{figure}
-
+\begin{center}
+    \bf Figure 2.2. Aire Guru. Web Interface\\
+    \end{center}
 To enable access by the majority of the population, Aire Guru is available at the web addresses https://www.aire.guru and https://www.airquality.guru.
 We use SSL that guarantees the encryption of data through the network and ensure the user has access to it since, as more and more browsers try to protect 
 users by only showing pages that use a secure method.\\
