--- a/contents/aire_guru/evaluation.tex
+++ b/contents/aire_guru/evaluation.tex
@@ -23,6 +23,10 @@ air quality in the city and its possible effects on their health.
 
 \begin{figure}[ht]
    \centering
-   \includegraphics[width=12cm]{enqueteResults}
-   \caption{Part of the user experience enquete results}
+   \includegraphics[width=12cm]{Figure_2_3_aireGuruSurveyResults}
+   \caption{Aire Guru. Survey results}
 \end{figure}
+
+\begin{center}
+   \bf Figure 2.3. Aire Guru. Survey results\\
+   \end{center}
