--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -26,7 +26,7 @@ particularly given the health consequences that Aire Guru explains in the contex
 
 By providing geographically specific data, in both historical and current hourly timeframes, users are able
 to control their exposure, which in some cases leads directly to the avoidance of serious negative health outcomes.\\
-
+\begin{comment}
 \begin{figure}[ht]
     \centering 
     \begin{tikzpicture}[thick]
@@ -48,3 +48,4 @@ to control their exposure, which in some cases leads directly to the avoidance o
     \includegraphics[width=8cm]{importedDataDecember}
     \caption{Personal Records. December}
 \end{figure}
+\end{comment}
