--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -53,6 +53,10 @@ Thanks to Aire Guru, users noticed about medical conditions with the potential t
         {\includegraphics[width=5.5cm  ]{form}}
     \hfill
     \subfigure [Google Analytics]
-        {\includegraphics[width=5.5cm]{googleAnalytics}}
+        {\includegraphics[width=5.5cm]{Figure_3_2_1_userFeedback}}
     \caption{User Feedback}
 \end{figure}
+
+\begin{center}
+    \bf{Figure 3.2.1. User Feedback}
+\end{center}
