--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -58,9 +58,17 @@ Some of them discovered that they had a medical condition that is affected by th
 \begin{figure}[ht]
     \centering
     \subfigure[Glossary detail]
-        {\includegraphics[width=6.2cm]{no2_glosary}}
+        {\includegraphics[width=6.2cm]{Figure_3_1_1_a_glossaryDetail}}
     \hfill
     \subfigure[Iconography detail]
-        {\includegraphics[width=5cm]{iconography}}
+        {\includegraphics[width=5cm]{Figure_3_1_1_b_iconographyDetail}}
     \caption{Glossary}
 \end{figure}
+
+
+
+
+\begin{center}
+\bf{(a) Glossary detail   (b) Iconography detail \\
+    Figure 3.1.1. Glossary}
+    \end{center}
